# SlamSim

./: .gitignore  CMakeLists.txt  README.md
cfg/: trajectory.ini
example/: main.cpp
include/: converter.h  definition.h  key_frame.h  map.h  map_point.h  system_simulator.h  trajectory_parameter.h  viewer.h
src/: converter.cpp  key_frame.cpp  map.cpp  map_point.cpp  system_simulator.cpp  trajectory_parameter.cpp  viewer.cpp
